# MeowCard

./: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
components/BSP/: CMakeLists.txt
components/BSP/ESP_LCD/: esp_lcd.c  esp_lcd.h
components/BSP/EXIT/: exit.c  exit.h
components/BSP/LCD/: lcd.c  lcdfont.h
components/BSP/SPI/: spi.c  spi.h
components/CARD/: CMakeLists.txt
components/CARD/data/: cardpool.c  cardpool.h
components/CARD/logic/: drawcard.c  drawcard.h
components/GUI/: CMakeLists.txt
main/: CMakeLists.txt  main.c
main/APP/: lvgl_demo.c  lvgl_demo.h
